# simple-json-schema

./: CHANGELOG.md  README.md  simple-json-schema.cabal
.github/workflows/: ci.yml
app/: AST.hs  Lexer.x  LexerUtils.hs  Main.hs  PP.hs  Parser.y  ParserUtils.hs  Resolve.hs  Validate.hs
app/JSON/: AST.hs  AesonParser.hs  Lexer.hs  Parser.hs  Parser.y
scripts/: build  version
