cabal-version:      3.0
name:               simple-json-schema
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common settings
    ghc-options: -Wall
    default-extensions:
      OverloadedStrings
      TemplateHaskell
      BlockArguments
      ImportQualifiedPost
      BangPatterns
      ViewPatterns
      LambdaCase
      ScopedTypeVariables

executable simple-json-schema
    import:           settings
    main-is:          Main.hs
    other-modules:
      Lexer, LexerUtils, Parser, ParserUtils, AST, Resolve, Validate, PP,
      JSON.Lexer, JSON.Parser, JSON.AST, JSON.AesonParser
    -- other-extensions:
    build-depends:
      base, text, array, bytestring, containers, directory, filepath,
      alex-tools, pretty, scientific, simple-get-opt,
      GraphSCC, aeson, vector
    hs-source-dirs:   app
    default-language: Haskell2010
    build-tool-depends: alex:alex, happy:happy
