cabal-version:      3.0
name:               simple-json-schema
version:            1.0.2
synopsis:           A tool for validating JSON schemas.
description:        A tool for validating JSON schemas.
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
copyright:          Galois Inc, 2025
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common settings
    ghc-options: -Wall
    default-extensions:
      OverloadedStrings
      TemplateHaskell
      BlockArguments
      ImportQualifiedPost
      BangPatterns
      ViewPatterns
      LambdaCase
      ScopedTypeVariables

executable simple-json-schema
    import:           settings
    main-is:          Main.hs
    other-modules:
      Lexer, LexerUtils, Parser, ParserUtils, AST, Resolve, Validate, PP,
      JSON.Lexer, JSON.Parser, JSON.AST, JSON.AesonParser
    build-depends:
      base, text, array, bytestring, containers, directory, filepath,
      alex-tools, pretty, scientific, simple-get-opt,
      GraphSCC, aeson, vector
    hs-source-dirs:   app
    default-language: Haskell2010
    build-tool-depends: alex:alex, happy:happy
